--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1 =class="full"></h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="">WebStudio</a>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+          <!-- Контактні дані -->
+        </ul>
+      </nav>
+      <div>
+        <a href="mailto:">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
+    </header>
+
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <!-- Наші переваги -->
+      <section>
+        <h2 hidden>наші переваги</h2>
+        <ul>
+          <li>
+            <h3>увага до деталей</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>пунктуальність</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>планування</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>сучасні технології</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Чим ми займаємось -->
+      <section>
+        <h2>Чим ми займаємось</h2>
+        <ul>
+          <li><img src="img/box-1.png" alt="фото клавіатури" /></li>
+          <li><img src="img/box-2.png" alt="фото телефона" /></li>
+          <li><img src="img/box-3.png" alt="фото планшета" /></li>
+        </ul>
+      </section>
+      <!-- Наша команда -->
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="img/ProductDesigner.jpg" alt="фото" width="270" />
+          <h3>Ігор Дем'яненко</h3>
+        </li>
+        <li>
+          <img src="img/FrontedDeveloper.jpg" alt="фото" width="270" />
+          <h3>Ольга Рєпіна</h3>
+        </li>
+        <li>
+          <img src="img/Marketing.jpg" alt="фото" width="270" />
+          <h3>Микола Тарасов</h3>
+        </li>
+        <li>
+          <img src="img/UIDesignir.jpg" alt="фото" width="270" />
+          <h3>Михайло Єрмаков</h3>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <!-- Контакти -->
+      <p>WebStudio</p>
+      <address>
+        <ul>
+          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="mailto:">info@devstudio.com</a></li>
+          <li><a href="tel:++380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
