--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </li>
         <li>
           <img src="img/Marketing.jpg" alt="фото" width="270" />
-          <h3>Микола Тарасов</h3>
+          <h3>микола Тарасов</h3>
         </li>
         <li>
           <img src="img/UIDesignir.jpg" alt="фото" width="270" />
