--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
           <!-- Контактні дані -->
         </ul>
       </nav>
-      <div>
-        <a href="mailto:">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
@@ -65,39 +67,50 @@
       <section>
         <h2>Чим ми займаємось</h2>
         <ul>
-          <li><img src="img/box-1.png" alt="фото клавіатури" /></li>
-          <li><img src="img/box-2.png" alt="фото телефона" /></li>
-          <li><img src="img/box-3.png" alt="фото планшета" /></li>
+          <li><img src="img/box-1.png" alt="фото клавіатури" width="370" /></li>
+          <li><img src="img/box-2.png" alt="фото телефона" width="370" /></li>
+          <li><img src="img/box-3.png" alt="фото планшета" width="370" /></li>
         </ul>
       </section>
       <!-- Наша команда -->
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="img/ProductDesigner.jpg" alt="фото" width="270" />
-          <h3>Ігор Дем'яненко</h3>
-        </li>
-        <li>
-          <img src="img/FrontedDeveloper.jpg" alt="фото" width="270" />
-          <h3>Ольга Рєпіна</h3>
-        </li>
-        <li>
-          <img src="img/Marketing.jpg" alt="фото" width="270" />
-          <h3>микола Тарасов</h3>
-        </li>
-        <li>
-          <img src="img/UIDesignir.jpg" alt="фото" width="270" />
-          <h3>Михайло Єрмаков</h3>
-        </li>
-      </ul>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="img/ProductDesigner.jpg" alt="фото" width="270" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="img/FrontedDeveloper.jpg" alt="фото" width="270" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="img/Marketing.jpg" alt="фото" width="270" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="img/UIDesignir.jpg" alt="фото" width="270" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <!-- Контакти -->
-      <p>WebStudio</p>
+      <a href="">WebStudio</a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
-          <li><a href="mailto:">info@devstudio.com</a></li>
+          <li>
+            <a
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:++380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
